Adds external interface testing for PQC algos

--- a/src/ml-dsa/sections/05-ml-dsa-sigver-capabilities.adoc
+++ b/src/ml-dsa/sections/05-ml-dsa-sigver-capabilities.adoc
@@ -1,5 +1,37 @@
 
 [[ml-dsa_sigVer_capabilities]]
+=== ML-DSA sigVer Registration Properties
+
+Each ML-DSA sigVer algorithm capability advertised is a self-contained JSON object using the following values.
+
+[[ML-DSA_sigver_caps_table]]
+.ML-DSA sigVer Algorithm Capabilities JSON Values
+|===
+| JSON Value | Description | JSON Type | Valid Values
+
+| algorithm | The ML-DSA algorithm to be validated | string | See <<supported>>
+| mode | The ML-DSA mode to be validated | string | See <<supported>>
+| revision | The algorithm testing revision to use | string | See <<supported>>
+| prereqVals | Prerequisite algorithm validations | array of prereqAlgVal objects | See <<prereq_algs>>
+| capabilities | An array of individual capability objects | array of capability objects | See <<ml-dsa-sigver-capabilities-table>>
+| signatureInterfaces | The ML-DSA signature interfaces supported | array of strings | "internal", "external"
+| preHash | Whether ML-DSA or HashML-DSA are supported | array of strings | "pure", "preHash"
+| externalMu | Whether mu is computed internally to the module or externally from the module under test | array of booleans | true, false
+|===
+
+The capability objects use the following properties.
+
+[[ml-dsa-sigver-capabilities-table]]
+.ML-DSA sigVer Capability Property JSON Values
+|===
+| JSON Value | Description | JSON Type | Valid Values
+
+| parameterSets | The ML-DSA parameter sets supported | array of strings | "ML-DSA-44", "ML-DSA-65", "ML-DSA-87"
+| messageLength | The supported message lengths in bits | domain | Min: 8, Max: 65536, Incr: 8
+| hashAlgs | The hash algorithms used if preHash ML-DSA is used | array of strings | "SHA2-224", "SHA2-256", "SHA2-384", "SHA2-512", "SHA2-512/224", "SHA2-512/256", "SHA3-224", "SHA3-256", "SHA3-384", "SHA3-512", "SHAKE-128", "SHAKE-256"
+| contextLength | The supported context lengths if the external interface is used | domain | Min: 0, Max: 2040, Incr: 8
+|===
+
 ==== ML-DSA sigVer Mode Capabilities Example
 
 Below is an example of the registration for ML-DSA / sigVer / FIPS204
@@ -7,15 +39,63 @@ Below is an example of the registration for ML-DSA / sigVer / FIPS204
 [source, json]
 ----
 {
-    "algorithm": "ML-DSA",
-    "mode": "sigVer",
-    "revision": "FIPS204",
-    "prereqVals": [
+  "algorithm": "ML-DSA",
+  "mode": "sigVer",
+  "revision": "FIPS204",
+  "prereqVals": [
+    {
+      "algorithm": "SHA",
+      "valValue": "123456"
+    }
+  ],
+  "capabilities": [
+    {
+      "parameterSets": [
+        "ML-DSA-44",
+        "ML-DSA-65",
+        "ML-DSA-87"
+      ],
+      "messageLength": [
         {
-            "algorithm": "SHA",
-            "valValue": "123456"
+          "min": 8,
+          "max": 65536,
+          "increment": 8
         }
-    ],
-    "parameterSets": ["ML-DSA-44", "ML-DSA-65", "ML-DSA-87"]
+      ],
+      "hashAlgs": [
+        "SHA2-224",
+        "SHA2-256",
+        "SHA2-384",
+        "SHA2-512",
+        "SHA2-512/224",
+        "SHA2-512/256",
+        "SHA3-224",
+        "SHA3-256",
+        "SHA3-384",
+        "SHA3-512",
+        "SHAKE-128",
+        "SHAKE-256"
+      ],
+      "contextLength": [
+        {
+          "min": 0,
+          "max": 2040,
+          "increment": 8
+        }
+      ]
+    }
+  ]
+  "externalMu": [
+    true,
+    false
+  ],
+  "signatureInterfaces": [
+    "external",
+    "internal"
+  ],
+  "preHash": [
+    "pure",
+    "preHash"
+  ]
 }
 ----
