--- a/src/slh-dsa/sections/05-slh-dsa-keygen-capabilities.adoc
+++ b/src/slh-dsa/sections/05-slh-dsa-keygen-capabilities.adoc
@@ -1,4 +1,21 @@
 
+[[SLH-DSA_keyGen_registration]]
+=== SLH-DSA keyGen Registration Properties
+
+Each SLH-DSA keyGen algorithm capability advertised is a self-contained JSON object using the following values.
+
+[[SLH-DSA_keygen_caps_table]]
+.SLH-DSA keyGen Algorithm Capabilities JSON Values
+|===
+| JSON Value | Description | JSON Type | Valid Values
+
+| algorithm | The algorithm to be validated | string | "SLH-DSA"
+| mode | The SLH-DSA mode to be validated | string | See <<supported>>
+| revision | The algorithm testing revision to use | string | See <<supported>>
+| prereqVals | Prerequisite algorithm validations | array of prereqAlgVal objects | See <<prereq_algs>>
+| parameterSets | The SLH-DSA parameter sets supported. Only applicable to SLH-DSA / keyGen / FIPS205. | array of strings | "SLH-DSA-SHA2-128s", "SLH-DSA-SHA2-128f", "SLH-DSA-SHA2-192s", "SLH-DSA-SHA2-192f", "SLH-DSA-SHA2-256s", "SLH-DSA-SHA2-256f", "SLH-DSA-SHAKE-128s", "SLH-DSA-SHAKE-128f", "SLH-DSA-SHAKE-192s", "SLH-DSA-SHAKE-192f", "SLH-DSA-SHAKE-256s", "SLH-DSA-SHAKE-256f"
+|===
+
 [[SLH-DSA_keyGen_capabilities]]
 ==== SLH-DSA keyGen Mode Capabilities Example
 
@@ -22,10 +39,10 @@ Below is an example of the registration for SLH-DSA / keyGen / FIPS205
         }
     ],
     "parameterSets": [
-    "SLH-DSA-SHA2-128s",
-    "SLH-DSA-SHA2-192f",
-    "SLH-DSA-SHAKE-192s",
-    "SLH-DSA-SHAKE-256f"
+        "SLH-DSA-SHA2-128s",
+        "SLH-DSA-SHA2-192f",
+        "SLH-DSA-SHAKE-192s",
+        "SLH-DSA-SHAKE-256f"
   ]
 }
 ----
