--- a/src/slh-dsa/sections/05-slh-dsa-siggen-capabilities.adoc
+++ b/src/slh-dsa/sections/05-slh-dsa-siggen-capabilities.adoc
@@ -1,4 +1,37 @@
 
+[[SLH-DSA_sigGen_capabilities]]
+=== SLH-DSA sigGen Registration Properties
+
+Each SLH-DSA sigGen algorithm capability advertised is a self-contained JSON object using the following values.
+
+[[SLH-DSA_sigGen_caps_table]]
+.SLH-DSA sigGen Algorithm Capabilities JSON Values
+|===
+| JSON Value | Description | JSON Type | Valid Values
+
+| algorithm | The algorithm to be validated | string | "SLH-DSA"
+| mode | The SLH-DSA mode to be validated | string | See <<supported>>
+| revision | The algorithm testing revision to use | string | See <<supported>>
+| prereqVals | Prerequisite algorithm validations | array of prereqAlgVal objects | See <<prereq_algs>>
+| capabilities | The capabilities of the implementation. Pairs of parameter sets and associated supported message lengths.  Only applicable to SLH-DSA / sigGen / FIPS205 and SLH-DSA / sigVer / FIPS205 | array of capability objects | See <<caps_sigGen_table>>
+| signatureInterfaces | The SLH-DSA signature interfaces supported | array of strings | "internal", "external"
+| preHash | Whether SLH-DSA or HashSLH-DSA are supported | array of strings | "pure", "preHash"
+| deterministic | The SLH-DSA signature generation variants supported. A value of "true" indicates that deterministic signature generation is supported and a value of "false" indicates that non-deterministic signature generation is supported. Only applicable to SLH-DSA / sigGen / FIPS205 | array of booleans | true, false
+|===
+
+Each capability advertised is a self-contained JSON object using the following values.
+
+[[caps_sigGen_table]]
+.Registration SLH-DSA sigGen Capability JSON Values
+|===
+| JSON Value | Description | JSON Type | Valid Values
+
+| parameterSets | The SLH-DSA parameter sets supported | array of strings | "SLH-DSA-SHA2-128s", "SLH-DSA-SHA2-128f", "SLH-DSA-SHA2-192s", "SLH-DSA-SHA2-192f", "SLH-DSA-SHA2-256s", "SLH-DSA-SHA2-256f", "SLH-DSA-SHAKE-128s", "SLH-DSA-SHAKE-128f", "SLH-DSA-SHAKE-192s", "SLH-DSA-SHAKE-192f", "SLH-DSA-SHAKE-256s", "SLH-DSA-SHAKE-256f"
+| messageLength | The supported message lengths in bits | domain | Min: 8, Max: 65536, Incr: 8
+| hashAlgs | The hash algorithms used if preHash SLH-DSA is used | array of strings | "SHA2-224", "SHA2-256", "SHA2-384", "SHA2-512", "SHA2-512/224", "SHA2-512/256", "SHA3-224", "SHA3-256", "SHA3-384", "SHA3-512", "SHAKE-128", "SHAKE-256"
+| contextLength | The supported context lengths if the external interface is used | domain | Min: 0, Max: 2040, Incr: 8
+|===
+
 [[SLH-dsa_sigGen_capabilities]]
 ==== SLH-DSA sigGen Mode Capabilities Example
 
@@ -7,45 +40,76 @@ Below is an example of the registration for SLH-DSA / sigGen / FIPS205
 [source, json]
 ----
 {
-    "algorithm": "SLH-DSA",
-    "mode": "sigGen",
-    "revision": "FIPS205",
-    "prereqVals": [
-        {
-            "algorithm": "SHA2-256", "valValue": "123456"
-        },
-        {
-            "algorithm": "SHA2-512", "valValue": "123456"
-        },
-        {
-            "algorithm": "HMAC-SHA-512", "valValue": "123456"
-        },
-        {
-            "algorithm": "SHAKE256", "valValue": "123456"
-        }
-    ],
-    "capabilities": [
+  "algorithm": "SLH-DSA",
+  "mode": "sigGen",
+  "revision": "FIPS205",
+  "prereqVals": [
     {
-      "parameterSets": ["SLH-DSA-SHA2-192s", "SLH-DSA-SHA2-256f", "SLH-DSA-SHAKE-192s", "SLH-DSA-SHAKE-256f"],
+      "algorithm": "SHA",
+      "valValue": "123456"
+    }
+  ],
+  "deterministic": [
+    true,
+    false
+  ],
+  "signatureInterfaces": [
+    "external",
+    "internal"
+  ],
+  "preHash": [
+    "pure",
+    "preHash"
+  ],
+  "capabilities": [
+    {
+      "parameterSets": [
+        "SLH-DSA-SHA2-128f",
+        "SLH-DSA-SHA2-192f",
+        "SLH-DSA-SHA2-256f"
+      ],
       "messageLength": [
         {
           "min": 8,
           "max": 65536,
           "increment": 8
         }
+      ],
+      "hashAlgs": [
+        "SHA2-256"
+      ],
+      "contextLength": [
+        {
+          "min": 0,
+          "max": 2040,
+          "increment": 8
+        }
       ]
     },
     {
-      "parameterSets": ["SLH-DSA-SHAKE-128f"],
+      "parameterSets": [
+        "SLH-DSA-SHAKE-128s",
+        "SLH-DSA-SHAKE-192s",
+        "SLH-DSA-SHAKE-256s"
+      ],
       "messageLength": [
         {
-          "min": 1024,
-          "max": 4096,
+          "min": 8,
+          "max": 65536,
+          "increment": 8
+        }
+      ],
+      "hashAlgs": [
+        "SHA3-512"
+      ],
+      "contextLength": [
+        {
+          "min": 0,
+          "max": 2040,
           "increment": 8
         }
       ]
     }
-  ],
-  "deterministic": [true, false]
+  ]
 }
 ----
