Fixes some mistakes in vector sets and tables

--- a/src/ml-dsa/sections/04-testtypes.adoc
+++ b/src/ml-dsa/sections/04-testtypes.adoc
@@ -17,7 +17,7 @@ For each test case provided, the IUT *SHALL* generate a key pair from a provided
 
 * ML-DSA / sigGen / * "AFT" - Algorithm Functional Test. 
 
-The IUT *SHALL* generate valid signatures based on the ACVP-provided message, private key, context (for external interface testing) and randomness (for non-deterministic signature testing). The signature is then compared to the known signature by the ACVP server. This tests the implementation of Algorithm 2 `ML-DSA.Sign()`, Algorithm 4 `HashML-DSA.Sign()`, and Algorithm 7 `ML-DSA.Sign_internal()` from <<FIPS204>>. 
+The IUT *SHALL* generate valid signatures based on the ACVP-provided message, mu (for external mu testing), private key, context (for external interface testing), hashAlg (for preHash testing), and randomness (for non-deterministic signature testing). The signature is then compared to the known signature by the ACVP server. This tests the implementation of Algorithm 2 `ML-DSA.Sign()`, Algorithm 4 `HashML-DSA.Sign()`, and Algorithm 7 `ML-DSA.Sign_internal()` from <<FIPS204>>. 
 
 There are several assurances to obtain from AFTs. First is correctness of the algorithm implementation. The server *SHALL* include at least 15 tests for each combination of capabilities to meet this assurance. The `"hashAlg"` capability *MAY* be excluded from the combination of capabilities due to the number of supported hash functions. Each `"hashAlg"` provided by the IUT *SHALL* be covered within the at least 15 tests generated for each combination of capabilities. 
 
@@ -66,7 +66,7 @@ The third assurance is correctness under a large number of rejections. The stand
 
 * ML-DSA / sigVer / * "AFT" - Algorithm Functional Test. 
 
-The ACVP server generates a series of messages, public keys, and signatures to communicate to the IUT. The IUT *SHALL* determine the validity of the signature. This tests the implementation of Algorithm 3 `ML-DSA.Verify()`, Algorithm 5 `HashML-DSA.Verify()`, and Algorithm 8 `ML-DSA.Verify_internal()` from <<FIPS204>>. Tests for signature verification are performed by the server modifying a valid signature to obtain specific assurances from the implementation. The server *SHALL* include at least 3 tests for each modification type (including "valid signature") for all combinations of capabilities. The `"hashAlg"` capability *MAY* be excluded from the combination of capabilities due to the number of supported hash functions. Each `"hashAlg"` provided by the IUT *SHALL* be covered within the at least 15 tests generated for each combination of capabilities. 
+The IUT *SHALL* determine the validity of the signature based on the ACVP-provided message, mu (for external mu testing), context (for external interface testing), hashAlg (for preHash testing), public key, and signature. This tests the implementation of Algorithm 3 `ML-DSA.Verify()`, Algorithm 5 `HashML-DSA.Verify()`, and Algorithm 8 `ML-DSA.Verify_internal()` from <<FIPS204>>. Tests for signature verification are performed by the server modifying a valid signature to obtain specific assurances from the implementation. The server *SHALL* include at least 3 tests for each modification type (including "valid signature") for all combinations of capabilities. The `"hashAlg"` capability *MAY* be excluded from the combination of capabilities due to the number of supported hash functions. Each `"hashAlg"` provided by the IUT *SHALL* be covered within the at least 15 tests generated for each combination of capabilities. 
 
 The signature modifications are:
 
