--- a/src/ml-dsa/sections/05-ml-dsa-siggen-capabilities.adoc
+++ b/src/ml-dsa/sections/05-ml-dsa-siggen-capabilities.adoc
@@ -9,15 +9,15 @@ Each ML-DSA sigGen algorithm capability advertised is a self-contained JSON obje
 |===
 | JSON Value | Description | JSON Type | Valid Values
 
-| algorithm | The ML-DSA algorithm to be validated | string | See <<supported>>
-| mode | The ML-DSA mode to be validated | string | See <<supported>>
-| revision | The algorithm testing revision to use | string | See <<supported>>
+| algorithm | The ML-DSA algorithm to be validated | string | "ML-DSA"
+| mode | The ML-DSA mode to be validated | string | "sigGen"
+| revision | The algorithm testing revision to use | string | "FIPS204"
 | prereqVals | Prerequisite algorithm validations | array of prereqAlgVal objects | See <<prereq_algs>>
 | capabilities | An array of individual capability objects | array of capability objects | See <<ml-dsa-siggen-capabilities-table>>
 | deterministic | The ML-DSA signature generation modes supported | array of booleans | true, false
 | signatureInterfaces | The ML-DSA signature interfaces supported | array of strings | "internal", "external"
-| preHash | Whether ML-DSA or HashML-DSA are supported | array of strings | "pure", "preHash"
-| externalMu | Whether mu is computed internally to the module or externally from the module under test | array of booleans | true, false
+| preHash | Whether ML-DSA and HashML-DSA are supported. Only required when `"signatureInterfaces"` contains "external". | array of strings | "pure", "preHash"
+| externalMu | Whether mu is computed internally to the module or externally from the module under test. Only applicable when `"signatureInterfaces"` contains `"internal"`. | array of booleans | true, false
 |===
 
 The capability objects use the following properties.
