--- a/src/ml-dsa/sections/06-ml-dsa-siggen-test-vectors.adoc
+++ b/src/ml-dsa/sections/06-ml-dsa-siggen-test-vectors.adoc
@@ -70,6 +70,7 @@ The following is an example JSON object sent from the server to the client for M
                 "tests": [
                     {
                         "tcId": 1,
+                        "sk": "D4E36A5...",
                         "message": "0D873AEFD..."
                     }
                 ]
@@ -101,7 +102,8 @@ The following is an example JSON object sent from the server to the client for M
                     {
                         "tcId": 71,
                         "sk": "D4E36A5...",
-                        "message": "34F4B..."
+                        "message": "34F4B...",
+                        "context": "ABCD"
                     }
                 ]
             },
@@ -118,6 +120,7 @@ The following is an example JSON object sent from the server to the client for M
                         "sk": "D4E36A5...",
                         "message": "34F4B...",
                         "rnd": "7AFF2F22A...",
+                        "context": "ABCD",
                         "hashAlg": "SHA2-256"
                     }
                 ]
