--- a/src/slh-dsa/sections/05-slh-dsa-keygen-capabilities.adoc
+++ b/src/slh-dsa/sections/05-slh-dsa-keygen-capabilities.adoc
@@ -10,10 +10,10 @@ Each SLH-DSA keyGen algorithm capability advertised is a self-contained JSON obj
 | JSON Value | Description | JSON Type | Valid Values
 
 | algorithm | The algorithm to be validated | string | "SLH-DSA"
-| mode | The SLH-DSA mode to be validated | string | See <<supported>>
-| revision | The algorithm testing revision to use | string | See <<supported>>
+| mode | The SLH-DSA mode to be validated | string | "keyGen"
+| revision | The algorithm testing revision to use | string | "FIPS205"
 | prereqVals | Prerequisite algorithm validations | array of prereqAlgVal objects | See <<prereq_algs>>
-| parameterSets | The SLH-DSA parameter sets supported. Only applicable to SLH-DSA / keyGen / FIPS205. | array of strings | "SLH-DSA-SHA2-128s", "SLH-DSA-SHA2-128f", "SLH-DSA-SHA2-192s", "SLH-DSA-SHA2-192f", "SLH-DSA-SHA2-256s", "SLH-DSA-SHA2-256f", "SLH-DSA-SHAKE-128s", "SLH-DSA-SHAKE-128f", "SLH-DSA-SHAKE-192s", "SLH-DSA-SHAKE-192f", "SLH-DSA-SHAKE-256s", "SLH-DSA-SHAKE-256f"
+| parameterSets | The SLH-DSA parameter sets supported. | array of strings | "SLH-DSA-SHA2-128s", "SLH-DSA-SHA2-128f", "SLH-DSA-SHA2-192s", "SLH-DSA-SHA2-192f", "SLH-DSA-SHA2-256s", "SLH-DSA-SHA2-256f", "SLH-DSA-SHAKE-128s", "SLH-DSA-SHAKE-128f", "SLH-DSA-SHAKE-192s", "SLH-DSA-SHAKE-192f", "SLH-DSA-SHAKE-256s", "SLH-DSA-SHAKE-256f"
 |===
 
 [[SLH-DSA_keyGen_capabilities]]
