--- a/src/slh-dsa/sections/05-slh-dsa-sigver-capabilities.adoc
+++ b/src/slh-dsa/sections/05-slh-dsa-sigver-capabilities.adoc
@@ -10,8 +10,8 @@ Each SLH-DSA sigVer algorithm capability advertised is a self-contained JSON obj
 | JSON Value | Description | JSON Type | Valid Values
 
 | algorithm | The algorithm to be validated | string | "SLH-DSA"
-| mode | The SLH-DSA mode to be validated | string | See <<supported>>
-| revision | The algorithm testing revision to use | string | See <<supported>>
+| mode | The SLH-DSA mode to be validated | string | "sigVer"
+| revision | The algorithm testing revision to use | string | "FIPS205"
 | prereqVals | Prerequisite algorithm validations | array of prereqAlgVal objects | See <<prereq_algs>>
 | capabilities | The capabilities of the implementation. Pairs of parameter sets and associated supported message lengths.  Only applicable to SLH-DSA / sigGen / FIPS205 and SLH-DSA / sigVer / FIPS205 | array of capability objects | See <<caps_sigVer_table>>
 | signatureInterfaces | The SLH-DSA signature interfaces supported | array of strings | "internal", "external"
