--- a/src/ml-dsa/sections/05-ml-dsa-keygen-capabilities.adoc
+++ b/src/ml-dsa/sections/05-ml-dsa-keygen-capabilities.adoc
@@ -9,9 +9,9 @@ Each ML-DSA keyGen algorithm capability advertised is a self-contained JSON obje
 |===
 | JSON Value | Description | JSON Type | Valid Values
 
-| algorithm | The ML-DSA algorithm to be validated | string | See <<supported>>
-| mode | The ML-DSA mode to be validated | string | See <<supported>>
-| revision | The algorithm testing revision to use | string | See <<supported>>
+| algorithm | The ML-DSA algorithm to be validated | string | "ML-DSA"
+| mode | The ML-DSA mode to be validated | string | "keyGen"
+| revision | The algorithm testing revision to use | string | "FIPS204"
 | prereqVals | Prerequisite algorithm validations | array of prereqAlgVal objects | See <<prereq_algs>>
 | parameterSets | The ML-DSA parameter sets supported | array of strings | "ML-DSA-44", "ML-DSA-65", "ML-DSA-87"
 |===
