Fixes some mistakes in vector sets and tables

--- a/src/slh-dsa/sections/05-slh-dsa-siggen-capabilities.adoc
+++ b/src/slh-dsa/sections/05-slh-dsa-siggen-capabilities.adoc
@@ -13,10 +13,10 @@ Each SLH-DSA sigGen algorithm capability advertised is a self-contained JSON obj
 | mode | The SLH-DSA mode to be validated | string | "sigGen"
 | revision | The algorithm testing revision to use | string | "FIPS205"
 | prereqVals | Prerequisite algorithm validations | array of prereqAlgVal objects | See <<prereq_algs>>
-| capabilities | The capabilities of the implementation. Pairs of parameter sets and associated supported message lengths.  Only applicable to SLH-DSA / sigGen / FIPS205 and SLH-DSA / sigVer / FIPS205 | array of capability objects | See <<caps_sigGen_table>>
+| capabilities | The capabilities of the implementation. Pairs of parameter sets and associated supported message lengths. | array of capability objects | See <<caps_sigGen_table>>
 | signatureInterfaces | The SLH-DSA signature interfaces supported | array of strings | "internal", "external"
 | preHash | Whether SLH-DSA or HashSLH-DSA are supported | array of strings | "pure", "preHash"
-| deterministic | The SLH-DSA signature generation variants supported. A value of "true" indicates that deterministic signature generation is supported and a value of "false" indicates that non-deterministic signature generation is supported. Only applicable to SLH-DSA / sigGen / FIPS205 | array of booleans | true, false
+| deterministic | The SLH-DSA signature generation variants supported. A value of "true" indicates that deterministic signature generation is supported and a value of "false" indicates that non-deterministic signature generation is supported. | array of booleans | true, false
 |===
 
 Each capability advertised is a self-contained JSON object using the following values.
